--- a/autoservice/templates/registered_car_models.html
+++ b/autoservice/templates/registered_car_models.html
@@ -1,10 +1,41 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Registered cars</h1>
-  <p>List of registered cars in auto-service</p>
-    {% for car in registered_cars_models %}
-        <li>
-            <a href="{% url 'specific_car' car.car_model_id %}">{{car.car_model}} - {{car.car_model.engine}} - {{car.client}}</a></li>
-    {% endfor %}
+<h1>Registered cars</h1>
+{% load static %}
+<p>List of registered cars in auto-service</p>{% for car in object_list %}
+    <div class="col-md-4 d-flex align-items-stretch">
+        <div class="card mb-4 shadow-sm box" style="width: 300px;">
+            {% if car.photo %}
+                <img src="{{ car.photo.url }}" class="card-img-top car-photo" alt="...">
+            {% else %}
+                <img src="{% static 'media/car_photos/no-image.png' %}" class="card-img-top car-photo">
+            {% endif %}
+            <div class="card-body">
+                <a href="{{ car.car_id }}">
+                <p class="card-text">{{ car.car_model }} </br> {{ car.plate_nr }}</p></a>
+                <p class="card-text">{{ car.client }}</p>
+            </div>
+        </div>
+    </div>
+{% endfor %}
+
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; pirmas</a>
+            <a href="?page={{ page_obj.previous_page_number }}">atgal</a>
+        {% endif %}
+
+        <span class="current">
+            {{ page_obj.number }} iš {{ page_obj.paginator.num_pages }}
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">pirmyn</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">paskutinis &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+
 {% endblock %}
