--- a/autoservice/templates/base.html
+++ b/autoservice/templates/base.html
@@ -22,6 +22,11 @@
                             <li><a href="{% url 'registered_car_models' %}">All registered cars</a></li>
                             <li><a href="{% url 'services' %}">All available services</a></li>
                             <li><a href="{% url 'orders' %}">Orders</a></li>
+                            <li>
+                                <form action="{% url 'search_car' %}" method="get" class="form-inline my-2 my-md-0">
+                                <input name="query" class="form-control" type="text" placeholder="Paieška">
+                                </form>
+                            </li>
 
                         </ul>
                     {% endblock %}
