--- a/autoservice/templates/base.html
+++ b/autoservice/templates/base.html
@@ -33,12 +33,20 @@
                                 <li><a href="{% url 'logout' %}?next=/autoservice">Logout</a></li>
                             {% else %}
                                 <li><a href="{% url 'login' %}?next={{request.path}}">Login</a></li>
-                                <li><a href="#">Register</a></li>
+                                <li><a href="{% url 'register'%}">Register</a></li>
                             {% endif %}
                         </ul>
                     {% endblock %}
                 </div>
                 <div class="col-sm-10 ">
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert alert-{% if message.tags == 'error' %}danger{% elif message.tags == 'info' %}success{% endif %}" role="alert">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+
                     {% block content %}
 
                     {% endblock %}
