--- a/autoservice/templates/specific_order.html
+++ b/autoservice/templates/specific_order.html
@@ -14,4 +14,34 @@
         <li>{{order.service}} / {{order.quantity}} / {{order.price}}</li>
         {% endfor %}
     </ul>
+
+    </br>
+    <h4>Atsiliepimai:</h4>
+    {% if order_list.reviews.all %}
+        {% for review in order_list.reviews.all %}
+          <hr>
+          <strong>{{ review.reviewer }}</strong>, <em>{{ review.date_created}}</em>
+          <p>{{ review.content }}</p>
+        {% endfor %}
+    {% else %}
+        <p>Užsakymas neturi atsiliepimų</p>
+    {% endif %}
+
+    {% if user.is_authenticated %}
+        <div class="fieldWrapper">
+        <hr><br/>
+        <h4>Palikite atsiliepimą:</h4>
+        <form action="" method="post">
+          {% csrf_token %}
+            <div class="form-group">
+                <label for="comment">Komentaras</label>
+                <input name="comment" type="text" class="form-control" id="comment" aria-describedby="commentHelp">
+                <small id="commentHelp" class="form-text text-muted">Iki 2000 simbolių.</small>
+            </div>
+            </br>
+          <button type="submit" class="btn btn-primary">Išsaugoti</button>
+        </form>
+        </div>
+    {% endif %}
+
 {% endblock %}
