some fixes to 9uzduotis. User_profile nepradetas.

--- a/autoservice/templates/base.html
+++ b/autoservice/templates/base.html
@@ -32,7 +32,7 @@
                                 <li><a href="{% url 'orders' %}">Orders</a></li>
                                 <li><a href="{% url 'logout' %}?next=/autoservice">Logout</a></li>
                             {% else %}
-                                <li><a href="{% url 'login' %}?next={{request.path}}">Login</a></li>
+                                <li><a href="{% url 'login' %}">Login</a></li>
                                 <li><a href="{% url 'register'%}">Register</a></li>
                             {% endif %}
                         </ul>
