--- a/autoservice/templates/user_order.html
+++ b/autoservice/templates/user_order.html
@@ -6,7 +6,7 @@
   {% if user_order_lists %}
     <ul>
       {% for order_list in user_order_lists %}
-        <li class="{% if order_list.is_overdue %}text-danger{% endif %}">
+        <li class="{% if order_list.is_overdue %}text-danger{% endif %}"><img class="rounded-circle" src="{{order_list.user_order.profile.photo.url}}">
           <a href="{% url 'specific_order' order_list.order_list_id %}">{{order_list.car.car_model}} {{order_list.car.plate_number}} {{order_list.car.vin_number}}</a> Due back: ({{ order_list.due_back }})
         </li>
       {% endfor %}
